--- a/src/styles/Pomodoro.module.css
+++ b/src/styles/Pomodoro.module.css
@@ -2,9 +2,10 @@
 
 .items {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: space-around;
-    margin-top: 200px;
+    margin-top: 25px;
 }
 
 .focus {
@@ -23,8 +24,8 @@
     /* color: #971400; */
     color: #000;
     font-family: 'Merriweather', 'Helvetica Neue';
-    letter-spacing: 0.2em;
-    font-size: 2.5em;
+    letter-spacing: 0.1em;
+    font-size: 1.8em;
     text-transform: uppercase;
     padding-top: 43px;
 }
@@ -41,4 +42,14 @@
     padding: 16px 0 16px 0;
     color: #971400;
     font-size: 0.9em;
+}
+
+ /* Small devices (portrait tablets and large phones, 600px and up) */
+ @media only screen and (min-width: 600px) {
+
+    .focus {
+        /* border: 2px solid #ccc; */
+        padding: 10px;
+        width: 500px;
+    }
 }
