--- a/src/styles/SessionBreak.module.css
+++ b/src/styles/SessionBreak.module.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     padding: 14px;
-    font-size: 1.4em;
+    font-size: 1.2em;
     font-family: 'Merriweather', 'Helvetica Neue';
     text-transform: uppercase;
     letter-spacing: 0.3em;
@@ -28,3 +28,11 @@ button {
 .plus {
     padding-left: 14px;
 }
+
+ /* Small devices (portrait tablets and large phones, 600px and up) */
+ @media only screen and (min-width: 600px) {
+    .break-group {
+      font-size: 1.4em;
+    }
+    
+   }
