--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather&family=Permanent+Marker&display=swap');
 
  /* Extra small devices (phones, 600px and down) */
- /* @media only screen and (max-width: 600px) {...} */
 .App {
   position: relative;
   height: 100vh;
@@ -44,7 +43,9 @@
  }
  
  /* Medium devices (landscape tablets, 768px and up) */
- /* @media only screen and (min-width: 768px) {...} */
+ @media only screen and (min-width: 768px) {
+  
+ }
  
  /* Large devices (laptops/desktops, 992px and up) */
  @media only screen and (min-width: 992px) {
@@ -67,48 +68,9 @@
  
  /* Extra large devices (large laptops and desktops, 1200px and up) */
  @media only screen and (min-width: 1200px) {
-  .App {
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-  }
   
   .title {
-    font-size: 4.3em;
+    font-size: 5.3em;
     font-family: 'Permanent Marker', cursive;
-    /* color: #008397; */
-    /* padding-left: 379px; */
-  }
-  
-  /* .image {
-    position: relative;
-    background-image: url('../assests/clock.avif');
-    background-repeat: no-repeat;
-    opacity: 0.6;
-    height: 100%;
-    width: 100%;
-    background-size: cover;
-  } */
-  
-  .App::before {
-    content: "";
-    background-image: url('../assets/clock4.avif');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    /* height: 100vh;
-    width: 100vw; */
-    overflow: hidden;
-    opacity: 0.3;
   }
  } 
