--- a/src/styles/Pomodoro.module.css
+++ b/src/styles/Pomodoro.module.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather&family=Permanent+Marker&display=swap');
 
+ /* Extra small devices (phones, 600px and down) */
 .items {
     display: flex;
     flex-direction: column;
@@ -8,21 +9,9 @@
     margin-top: 25px;
 }
 
-.focus {
-    /* border: 2px solid #ccc; */
-    padding: 10px;
-    width: 500px;
-}
-
-.break {
-    /* border: 2px solid #ccc; */
-    padding: 10px;
-    width: 500px;
-}
-
 .timer {
     /* color: #971400; */
-    color: #000;
+    /* color: #000; */
     font-family: 'Merriweather', 'Helvetica Neue';
     letter-spacing: 0.1em;
     font-size: 1.8em;
@@ -47,9 +36,9 @@
  /* Small devices (portrait tablets and large phones, 600px and up) */
  @media only screen and (min-width: 600px) {
 
-    .focus {
-        /* border: 2px solid #ccc; */
-        padding: 10px;
-        width: 500px;
-    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
 }
