--- a/src/styles/SessionBreak.module.css
+++ b/src/styles/SessionBreak.module.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather&family=Permanent+Marker&display=swap');
 
+ /* Extra small devices (phones, 600px and down) */
 .break-group {
     display: flex;
     flex-direction: column;
@@ -8,7 +9,10 @@
     font-family: 'Merriweather', 'Helvetica Neue';
     text-transform: uppercase;
     letter-spacing: 0.3em;
-    /* color: #971400; */
+}
+
+.break {
+    font-size: 1.1em;
 }
 
 button {
@@ -32,7 +36,23 @@ button {
  /* Small devices (portrait tablets and large phones, 600px and up) */
  @media only screen and (min-width: 600px) {
     .break-group {
-      font-size: 1.4em;
+        font-size: 1.4em;
+        padding-left: 73px;
     }
     
    }
+
+       /* Medium devices (landscape tablets, 768px and up) */
+ @media only screen and (min-width: 768px) {
+
+}
+
+       /* Extra large devices (large laptops and desktops, 1200px and up) */
+ @media only screen and (min-width: 1200px) {
+    .break-group {
+        display: flex;
+        flex-direction: column;
+        font-size: 1.6em;
+        padding-left: 92px;
+    }
+ }
